fix: Swagger 접속 안되는 버그 해결